--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -140,6 +140,14 @@
 	background-color: #34a6dd;
 }
 
+#header.header-scroll {
+	background: #159fda;
+	-webkit-transition: background .3s linear;
+	transition: background .3s linear;
+}
+
+
+
 .logo {
 	-webkit-transition: width .3s linear;
 	transition: width .3s linear;
@@ -1435,4 +1443,4 @@ body {
 		background-color: #34a6dd;
 	}
 }
-
+
